--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/SimonMilord/Pomodoro/src",
+  "homepage": "https://SimonMilord.github.io/Pomodoro",
   "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
